add menu button

--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>Puzzle Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/fontello.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Puzzle Game</h1>
-    </header>
     <main>
         <div id="game">
             <div id="board"></div>
-            <button id="reset">Reset</button>
-            <div id="score"></div>
+            <div id="menuButton"><i class="icon-menu"></i></div>
         </div>
     </main>
     <script src="jquery-3.2.1.min.js"></script>
