--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Puzzle Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/game.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/fontello.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
@@ -17,6 +17,6 @@
         </div>
     </main>
     <script src="jquery-3.2.1.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
